--- a/app/src/main/res/layout/fragment_gameplay.xml
+++ b/app/src/main/res/layout/fragment_gameplay.xml
@@ -3,14 +3,14 @@
     android:layout_height="match_parent" tools:context="com.niels.mobilegameofwords.gameplay">
 
     <Button
-        android:layout_width="140dp"
+        android:layout_width="106dp"
         android:layout_height="wrap_content"
         android:text="Irrelevant"
         android:id="@+id/irrelevantBtn"
         android:layout_gravity="left|center_vertical" />
 
     <Button
-        android:layout_width="140dp"
+        android:layout_width="106dp"
         android:layout_height="wrap_content"
         android:text="Relevant"
         android:id="@+id/relevantBtn"
@@ -24,11 +24,20 @@
         android:id="@+id/currentGameWord"
         android:layout_gravity="center_horizontal|bottom" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Word 1/10"
+        android:layout_margin="6dp"
+        android:id="@+id/wordProgress"
+        android:layout_gravity="left|bottom" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finish"
         android:id="@+id/finishBtn"
-        android:layout_gravity="left|bottom" />
+        android:layout_gravity="right|bottom" />
 
 </FrameLayout>
