--- a/app/src/main/res/layout/fragment_input_loc_relevant_word.xml
+++ b/app/src/main/res/layout/fragment_input_loc_relevant_word.xml
@@ -1,34 +1,41 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.niels.mobilegameofwords.inputLocRelevantWord">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Input location relevant word. Input location relevant word. Input location relevant word. Input location relevant word. Input location relevant word"
-        android:gravity="center_horizontal" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:text="Input location relevant word. Input location relevant word. Input location relevant word. Input location relevant word. Input location relevant word" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_margin="50dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/locRelevantEditText"
-        android:layout_gravity="center_horizontal|top"
-        android:gravity="center_horizontal"
-        android:inputType="textCapSentences"
-        android:maxLines="1"
-        android:singleLine="true" />
+        <EditText
+            android:id="@+id/locRelevantEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_margin="50dp"
+            android:gravity="center_horizontal"
+            android:inputType="textCapSentences"
+            android:maxLines="1"
+            android:singleLine="true" />
 
-    <Button
-        android:id="@+id/continueToSlidersBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Continue"
-        android:layout_gravity="center" />
+        <Button
+            android:id="@+id/continueToSlidersBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Continue" />
 
     </LinearLayout>
 </FrameLayout>
