--- a/app/src/main/res/layout/fragment_rate_words_slider.xml
+++ b/app/src/main/res/layout/fragment_rate_words_slider.xml
@@ -11,13 +11,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
-                android:text="Slider instructions go here. Slider instructions go here. Slider instructions go here. Slider instructions go here." />
+                android:text="DETERMINE CORRECT SLIDER LABELS. Slider instructions go here. Slider instructions go here. Slider instructions go here." />
 
             <TextView
                 android:id="@+id/rateWordOne"
@@ -47,7 +51,7 @@
                         android:layout_gravity="start"
                         android:text="Highly irrelevant"
                         android:textAlignment="textStart"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -56,7 +60,7 @@
                         android:layout_weight="0.2"
                         android:text="Irrelevant"
                         android:textAlignment="textStart"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -64,7 +68,7 @@
                         android:layout_gravity="center_horizontal"
                         android:text="Somewhat relevant"
                         android:textAlignment="center"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -73,7 +77,7 @@
                         android:layout_weight="0.2"
                         android:text="Relevant"
                         android:textAlignment="textEnd"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -81,7 +85,7 @@
                         android:layout_gravity="end"
                         android:text="Highly relevant"
                         android:textAlignment="textEnd"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <SeekBar
@@ -121,7 +125,7 @@
                         android:layout_gravity="start"
                         android:text="Highly irrelevant"
                         android:textAlignment="textStart"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/answerNegative4"
@@ -131,7 +135,7 @@
                         android:layout_weight="0.2"
                         android:text="Irrelevant"
                         android:textAlignment="textStart"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/answerNegative3"
@@ -140,7 +144,7 @@
                         android:layout_gravity="center_horizontal"
                         android:text="Somewhat relevant"
                         android:textAlignment="center"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/answerNegative2"
@@ -150,7 +154,7 @@
                         android:layout_weight="0.2"
                         android:text="Relevant"
                         android:textAlignment="textEnd"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/answerNegative1"
@@ -159,7 +163,7 @@
                         android:layout_gravity="end"
                         android:text="Highly relevant"
                         android:textAlignment="textEnd"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <SeekBar
@@ -199,7 +203,7 @@
                         android:layout_gravity="start"
                         android:text="Highly irrelevant"
                         android:textAlignment="textStart"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -208,7 +212,7 @@
                         android:layout_weight="0.2"
                         android:text="Irrelevant"
                         android:textAlignment="textStart"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -216,7 +220,7 @@
                         android:layout_gravity="center_horizontal"
                         android:text="Somewhat relevant"
                         android:textAlignment="center"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -225,7 +229,7 @@
                         android:layout_weight="0.2"
                         android:text="Relevant"
                         android:textAlignment="textEnd"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="72dp"
@@ -233,7 +237,7 @@
                         android:layout_gravity="end"
                         android:text="Highly relevant"
                         android:textAlignment="textEnd"
-                        android:textSize="15sp" />
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <SeekBar
@@ -247,6 +251,7 @@
             <Button
                 android:id="@+id/startGameBtn"
                 android:text="Start Game"
+                android:layout_marginTop="40dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal" />
