--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,6 +19,14 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
+        <ImageView
+            android:layout_width="246dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/gow_logo"
+            android:layout_height="126dp"
+            android:adjustViewBounds="true"
+            android:layout_marginBottom="34dp" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
