--- a/app/src/main/res/layout/fragment_rate_words_slider.xml
+++ b/app/src/main/res/layout/fragment_rate_words_slider.xml
@@ -11,6 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/sliderLayoutHolder"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -22,158 +23,6 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:text="DETERMINE CORRECT SLIDER LABELS. Slider instructions go here. Slider instructions go here. Slider instructions go here." />
-
-            <TextView
-                android:id="@+id/rateWordOne"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:gravity="center_horizontal"
-                android:text="Word one."
-                android:textSize="26sp" />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:layout_width="72dp"
-                        android:layout_height="wrap_content"
-                        android:text="Highly irrelevant"
-                        android:layout_alignParentLeft="true"
-                        android:textSize="12sp" />
-
-                    <TextView
-                        android:layout_width="72dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:text="Highly relevant"
-                        android:textAlignment="textEnd"
-                        android:layout_alignParentRight="true"
-                        android:textSize="12sp" />
-                </RelativeLayout>
-
-                <SeekBar
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:max="100"
-                    android:progress="50" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/rateWordTwo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:gravity="center_horizontal"
-                android:text="Word two."
-                android:textSize="26sp" />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:layout_width="72dp"
-                        android:layout_height="wrap_content"
-                        android:text="Highly irrelevant"
-                        android:layout_alignParentLeft="true"
-                        android:textSize="12sp" />
-
-                    <TextView
-                        android:layout_width="72dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:text="Highly relevant"
-                        android:textAlignment="textEnd"
-                        android:layout_alignParentRight="true"
-                        android:textSize="12sp" />
-                </RelativeLayout>
-
-                <SeekBar
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:max="100"
-                    android:progress="50" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/rateWordThree"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:gravity="center_horizontal"
-                android:text="Word three."
-                android:textSize="26sp" />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
-
-                    <TextView
-                        android:layout_width="72dp"
-                        android:layout_height="wrap_content"
-                        android:text="Highly irrelevant"
-                        android:layout_alignParentLeft="true"
-                        android:textSize="12sp" />
-
-                    <TextView
-                        android:layout_width="72dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:text="Highly relevant"
-                        android:textAlignment="textEnd"
-                        android:layout_alignParentRight="true"
-                        android:textSize="12sp" />
-                </RelativeLayout>
-
-                <SeekBar
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:max="100"
-                    android:progress="50" />
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/startGameBtn"
-                android:text="Start Game"
-                android:layout_marginTop="40dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
 
