--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -44,10 +44,36 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="wrap_content"
-            android:text="Current leaderboard will appear here" />
+            android:text="Highscores"
+            style="@style/Base.TextAppearance.AppCompat.Subhead" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/leaderboardUsersLayout"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="6dp"
+                android:orientation="vertical" />
+
+            <LinearLayout
+                android:id="@+id/leaderboardScoresLayout"
+                android:layout_marginLeft="6dp"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/playGameBtn"
