Calculate scores and push to DB.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,20 +28,38 @@
             android:layout_marginBottom="34dp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/welcomeTextView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginBottom="20dp"
+            android:textSize="20sp"
             android:text="Welcome to Game of Words!" />
 
-        <TextView
-            android:id="@+id/currentLocationTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayoutUsernameInput"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginBottom="20dp"
-            android:text="Current location not applicable." />
+            android:orientation="vertical"
+            android:layout_marginBottom="20dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="Please choose a nickname!"/>
+
+            <EditText
+                android:id="@+id/usernameEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:hint="nickname"
+                android:inputType="text|textPersonName"
+                android:editable="true" />
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
