--- a/app/src/main/res/layout/fragment_finish_game.xml
+++ b/app/src/main/res/layout/fragment_finish_game.xml
@@ -10,12 +10,15 @@
 
         <TextView android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginBottom="40dp"
+            android:layout_marginTop="70dp"
             android:text="Game finished!" />
 
         <TextView
             android:id="@+id/pointsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
             android:capitalize="characters"
             android:text="Calculating points ..."
             android:textSize="@dimen/abc_text_size_headline_material" />
@@ -24,12 +27,16 @@
             android:id="@+id/playAgainButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:width="120dp"
             android:text="Play again!" />
 
         <Button
             android:id="@+id/backMainScreenButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:width="120dp"
             android:text="Take me home" />
 
     </LinearLayout>
