--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -4,7 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.niels.mobilegameofwords.HomeScreen">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
         android:id="@+id/intro_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,7 +58,6 @@
                 android:hint="nickname"
                 android:inputType="text|textPersonName"
                 android:textSize="18sp" />
-
         </LinearLayout>
 
         <TextView
@@ -84,17 +88,17 @@
                 android:layout_marginLeft="6dp"
                 android:layout_weight="1"
                 android:orientation="vertical" />
-
         </LinearLayout>
-
 
         <Button
             android:id="@+id/playGameBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="PLAY" />
+            android:layout_marginTop="18dp"
+            android:text="Start!" />
     </LinearLayout>
+    </ScrollView>
 
     <FrameLayout
         android:id="@+id/container_body"
