--- a/app/src/main/res/layout/fragment_finish_game.xml
+++ b/app/src/main/res/layout/fragment_finish_game.xml
@@ -2,35 +2,52 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.niels.mobilegameofwords.finishGame">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <TextView android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="22dp"
-            android:layout_marginTop="54dp"
-            android:text="Game finished - your final score is" />
-
-        <TextView
-            android:id="@+id/pointsTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
-            android:capitalize="characters"
-            android:text="Calculating points ..."
-            android:textSize="@dimen/abc_text_size_headline_material" />
+            android:gravity="center"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
-        <Button
-            android:id="@+id/backMainScreenButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="6dp"
-            android:width="120dp"
-            android:text="Play again!" />
+            <ImageView
+                android:layout_width="246dp"
+                android:layout_height="126dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="34dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/gow_logo" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="22dp"
+                android:layout_marginTop="14dp"
+                android:text="@string/finishedScore" />
 
+            <TextView
+                android:id="@+id/pointsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
+                android:capitalize="characters"
+                android:text="@string/calculatingScore"
+                android:textSize="@dimen/abc_text_size_headline_material" />
+
+            <Button
+                android:id="@+id/backMainScreenButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:width="120dp"
+                android:text="@string/playAgain" />
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
