--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -56,8 +56,9 @@
                 android:layout_height="wrap_content"
                 android:editable="true"
                 android:hint="nickname"
-                android:inputType="text|textPersonName"
-                android:textSize="18sp" />
+                android:inputType="text|textCapWords|textPersonName"
+                android:textSize="18sp"
+                android:singleLine="true" />
         </LinearLayout>
 
         <TextView
