--- a/app/src/gamified/res/layout/fragment_home_screen.xml
+++ b/app/src/gamified/res/layout/fragment_home_screen.xml
@@ -57,8 +57,8 @@
                 android:editable="true"
                 android:hint="nickname"
                 android:inputType="text|textCapWords|textPersonName"
-                android:textSize="18sp"
-                android:singleLine="true" />
+                android:singleLine="true"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <TextView
