--- a/app/src/main/res/layout/fragment_input_loc_relevant_word.xml
+++ b/app/src/main/res/layout/fragment_input_loc_relevant_word.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
+            android:paddingTop="10dp"
             android:text="@string/inputRelevantWordInstructions"
             android:textSize="18dp" />
 
