--- a/app/src/main/res/layout/fragment_rate_words_slider.xml
+++ b/app/src/main/res/layout/fragment_rate_words_slider.xml
@@ -22,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
+                android:paddingTop="10dp"
                 android:text="@string/sliderInstructions"
                 android:textSize="18dp" />
 
