--- a/app/src/main/res/layout/fragment_gameplay.xml
+++ b/app/src/main/res/layout/fragment_gameplay.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
-        android:text="Relevant word?"
+        android:text="Retrieving word ..."
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
