--- a/app/src/nongamified/res/layout/fragment_gameplay.xml
+++ b/app/src/nongamified/res/layout/fragment_gameplay.xml
@@ -1,6 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.niels.mobilegameofwords.gameplay">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.niels.mobilegameofwords.gameplay">
 
 
     <ImageView
@@ -24,7 +26,7 @@
         android:id="@+id/currentGameWord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
+        android:layout_gravity="center"
         android:text="@string/loadingCurrentWord"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
