--- a/app/src/main/res/layout/fragment_input_loc_relevant_word.xml
+++ b/app/src/main/res/layout/fragment_input_loc_relevant_word.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.niels.mobilegameofwords.inputLocRelevantWord">
+    tools:context="com.niels.geooulu.inputLocRelevantWord">
 
     <LinearLayout
         android:layout_width="match_parent"
