--- a/app/src/nongamified/res/layout/fragment_finish_game.xml
+++ b/app/src/nongamified/res/layout/fragment_finish_game.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.niels.mobilegameofwords.finishGame">
+    tools:context="com.niels.geooulu.finishGame">
 
     <ScrollView
         android:id="@+id/scrollView"
