--- a/app/src/nongamified/res/layout/fragment_gameplay.xml
+++ b/app/src/nongamified/res/layout/fragment_gameplay.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.niels.mobilegameofwords.gameplay">
+    tools:context="com.niels.geooulu.gameplay">
 
 
     <ImageView
