--- a/app/src/nongamified/res/layout/fragment_finish_game.xml
+++ b/app/src/nongamified/res/layout/fragment_finish_game.xml
@@ -25,7 +25,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="34dp"
                 android:adjustViewBounds="true"
-                android:src="@drawable/gow_logo" />
+                android:src="@drawable/logo" />
 
             <TextView
                 android:layout_width="wrap_content"
