Words now selected in accordance with user history. Added information when user ran out of words.

--- a/app/src/gamified/res/layout/fragment_home_screen.xml
+++ b/app/src/gamified/res/layout/fragment_home_screen.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="34dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/gow_logo" />
+            android:src="@drawable/logo" />
 
         <TextView
             android:id="@+id/welcomeTextView"
